video/ome/ingress-wildcard/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: signal
  annotations:
    # set timeout to 10 hours
    nginx.ingress.kubernetes.io/proxy-read-timeout: '36000'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '36000'
spec:
  ingressClassName: nginx
  tls:
  - secretName: AUTOMATIC_REPLACE
  rules:
  - host: signal.AUTOMATIC_REPLACE.duckdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: viewer
            port:
              name: http
